# ThoraxAI

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: components.py  data.py  inference.py  main.py  styles.py
notebooks/: 01_eda.ipynb  02_training.ipynb
outputs/: eda_summary.json  results.json  training_summary.json
reports/: Rapport Technique - ThoraxAI - Deep Learning.docx
scripts/: create_samples.py
src/: __init__.py  config.py  dataset.py  model.py
src/eval/: __init__.py  gradcam.py  metrics.py  plots.py  visualize.py
src/models/: __init__.py  architectures.py  factory.py
src/train/: __init__.py  early_stopping.py  kfold.py  loop.py
